--- a/assets/style.css
+++ b/assets/style.css
@@ -1,81 +1,226 @@
-@import url(/assets/reset.css);
+@import url(/assets/global.css);
 body{
-  background: hsla(0, 0%, 0%, 1);
-  left: 709px;
-
+  background-color: black;
+  width:1440px ;
 }
-
-header{
-  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url(/assets/images/banner.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 600px;
-  padding-top: 60px;
-  border-bottom: 1px solid #33A8DB80;
+.cabecalho{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 1440px;
+  height: 605px;
+  border-bottom: 1px #33a8db solid;
+  background: linear-gradient(180deg, rgba(51, 168, 219, 0) 0%, rgba(51, 168, 219, 0.2) 99.99%, rgba(51, 168, 219, 0.2) 100%), url(/assets/images/banner.png);
 }
-
-
-.banner .banner-content {
-    color: white;
-    width: 600px;
-    margin: auto;
-    text-align: center;
-    justify-content: center;
+.cabecalho-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  width: 510px;
+  height: 393px;
+  margin: 56px 465px 24px 465px;
+  
 }
-
-.logo{
-  background-color: rgba(0, 0, 0, .2);
-  height: 260px;
-  width: 260px;
-  margin: auto;
+.cabecalho-logo{
+  width: 248px;
+  height: 214px;
+  border:27px solid #00000020 ;
   border-radius: 50%;
-  padding: 16px;
-  margin-bottom: 16px;
+  background: #00000020;
+
+}
+.cabecalho-titulo{
+   /* FALTA COLOCAR O BACKGROUND PARA DENTRO DO TEXTO ( FAZER ISSO EM CASA*/
+   background: linear-gradient(180deg, #33A8DB 0%, #1472B7 100%);
+
+  
+   font-weight: 900;
+   font-size: 40px;
+   line-height: 46.96px;
+   text-align: center;
+}
+.cabecalho-texto{
+  /* FALTA IMPORTAR A FONT-FAMILY E MODIFICAR AQUI E NO TITULO*/
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23.48px;
+  text-align: center;
+}
+.botao-inscricao{
+  width: 353px;
+  height: 57px;
+  padding: 19px 91px;
+  border: 2px solid;
+  border-image-source: linear-gradient(180deg, #3BA1CD 0%, #1572B7 100%);
+  color: #31A8DB;
+}
+.trilha-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 792px;
+  height: 352px;
+  margin-top: 118px;
+  margin-left: 324px;
+  margin-bottom: 90px;
+  gap:24px;
+}
+.trilha-titulo{
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37.57px;
+  letter-spacing: 19%;
+  color:#33A8DB ;
+  text-transform: uppercase;
+}
+.trilha-texto{
+  font-weight: 400px;
+  font-size: 16px;
+  line-height: 18.78px;
+  align-items: center;
+  text-align: center;
+  color: white;
 }
 
-.logo img{
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+.trilha-modulos{
+  margin: 24px 128.5px;
+  gap: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.banner-content h1{
-  width: auto;
-  height: 47px;
+.trilha-modulo-content{
+  border-radius: 51px;
+  border: 1px solid #33A8DB;box-shadow: -2px 6px 4px 0px #00000066 inset;
+  background: #252525;
+  font-weight: 400px;
+  font-size: 16px;
+  line-height: 18.78px;
+  color: white;
+  text-align: center;
+  justify-content: center;
+  padding: 16px 127px;
+  gap: 10px;
+  width: 411px;
+  height: 19px;
+}
+.trilha-modulo-content span{
+  color:#33A8DB ;
+  font-weight: 400px;
+  font-size: 16px;
+  line-height: 18.78px;
+}
+.divisoria{
+  display: flex;
+  flex-direction: column;
+  width: 1440px;
+  height: 363px;
+  border: 1px 1px 1px 0px solid #33A8DB;
+  border-top: 1px solid #33A8DB;
+
+}
+
+.woman{
+  margin: 0;
+  position: relative;
+  max-height: 363px;
+  width: 1440px;
+  object-fit: cover;
+
+}
+.mude-o-mundo{
   font-weight: 900;
   font-size: 40px;
   line-height: 46.96px;
-  background: -webkit-linear-gradient(#33A8DB, #1472B7);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color:transparent;
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 16px;
+  color: white;
+  width: 244px;
+  height: 141px;
+  box-shadow: 3px 2px 0px 0px #33A8DB;
+  margin-top: 111px;
+  margin-left: 198px;
+  position: absolute;
 }
-.banner-content p{
+.novos-desafios-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  height: 46px;
-  font-weight: 400px;
-  font-size: 20px;
-  line-height: 23.48px;
-  margin-top: 16px;
-  margin-bottom: 24px;  
+  border-top: 1px solid #33A8DB;
+  border-bottom: 1px solid #33A8DB;
 }
-
-.banner-content button{
-  width: 326px;
-  height: 57px;
-  padding: 19px 46px;
-  gap: 31px;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  background-color: transparent;
-  border-image: linear-gradient(#3BA1CD, #1572B7);
-  border-image-slice: 10;
-  border-radius: 30px;
+.novos-desafios-titulo{
+  width: 746px;
+  height: 76px;
+  margin-top: 76px;
+  margin-bottom: 32px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37.57px;
+  letter-spacing: 19%;
+  text-align: center;
+  text-justify: center;
   color: #33A8DB;
-  margin-bottom: 75px;
+}
+.novos .novos-desafios-img{
+  width: 659px;
+  height: 429px;
+  margin-left: 390px;
+}
+.novos-desafios-texto{
+  width: 792px;
+  height: 76px;
+  margin-top: 40px;
+  margin-bottom: 91px;
+  border-left: 324px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18.78px;
+  text-align: center;
+  color: white;
+}
+.rodape-content{
+  width: 1440px;
+  max-height: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(180deg, rgba(51, 168, 219, 0) 0%, rgba(51, 168, 219, 0.2) 99.99%, rgba(51, 168, 219, 0.2) 100%);
+
+}
+.rodape-img{
+  width: 310px;
+  height: 44px;
+  gap: 0px;
+  padding: 0px;
+  opacity: 0px;
+  margin-top: 59px;
+  margin-bottom: 10px;
 }
 
-
+.rodape-content span{
+  text-align: center;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18.78px;
+  margin-bottom: 38px;
+  
+}
+.rodape-content a{
+  text-decoration: none;
+  color: #33A8DB;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 18.78px;
+  
+}
